--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
     <title>Vite + Material UI + TS</title>
+    <style>
+      .highcharts-credits {
+        opacity: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
